--- a/Glass-Compound-Analysis/Decision_Tree_sklearn_Erbium_density_prediction.ipynb
+++ b/Glass-Compound-Analysis/Decision_Tree_sklearn_Erbium_density_prediction.ipynb
@@ -37,7 +37,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "b16c7554-98cf-4c77-9d68-f0d86803f1a1"
+        "outputId": "d8329cad-b3a6-403a-ef3e-0cf5d881e88d"
       },
       "source": [
         "# Load the data\r\n",
@@ -415,11 +415,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vl867epFfjhX",
-        "outputId": "40655b6f-4f2c-484c-b5db-6aeb39e7f8c6"
+        "outputId": "3c859b52-ab74-4c99-8799-9fecc81d8a3a"
       },
       "source": [
         "# Select a linear model\r\n",
-        "model = DecisionTreeRegressor(random_state=1)\r\n",
+        "model = DecisionTreeRegressor()\r\n",
         "\r\n",
         "# Train the model\r\n",
         "model.fit(train_features, train_labels)"
@@ -435,7 +435,7 @@
               "                      min_impurity_decrease=0.0, min_impurity_split=None,\n",
               "                      min_samples_leaf=1, min_samples_split=2,\n",
               "                      min_weight_fraction_leaf=0.0, presort='deprecated',\n",
-              "                      random_state=1, splitter='best')"
+              "                      random_state=None, splitter='best')"
             ]
           },
           "metadata": {
@@ -469,7 +469,7 @@
           "height": 279
         },
         "id": "g2Ak0KyLhWCg",
-        "outputId": "31f30af6-30b6-4d3d-869f-4036243d82b8"
+        "outputId": "9a6dd655-1679-49e5-a354-84e1984b5c9b"
       },
       "source": [
         "x = np.arange(train_features['Molar volume'].min(), train_features['Molar volume'].max()).reshape(-1, 1)\r\n",
@@ -500,7 +500,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "247153a1-77f7-47d4-e09c-f6a460567b3a"
+        "outputId": "8660d6fe-2988-45cd-a4b1-e39b656799a0"
       },
       "source": [
         "pred"
@@ -528,7 +528,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mp6FhXHcWALA",
-        "outputId": "7090d22d-1992-419d-b867-d13139239fcf"
+        "outputId": "16c246f3-8150-485c-917c-b80373a88adf"
       },
       "source": [
         "pred_y = model.predict(train_features)\r\n",
@@ -562,7 +562,7 @@
           "height": 296
         },
         "id": "uulObUx2TPnC",
-        "outputId": "f897b481-0e70-40be-ed3e-e24539d1f1b5"
+        "outputId": "50625d58-315d-4066-c0b5-84206041a64c"
       },
       "source": [
         "actual_trend=train_labels.values\r\n",
@@ -572,19 +572,19 @@
         "plt.ylabel('Density')\r\n",
         "plt.legend()"
       ],
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7fa6ed8c4c50>"
+              "<matplotlib.legend.Legend at 0x7f2f89af4860>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -617,12 +617,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZWTXaYE-BhUp",
-        "outputId": "4052eb87-71ce-4e2c-8213-641e8700913c"
+        "outputId": "5c18c22e-60b2-4ccf-dfaf-27ba530a6566"
       },
       "source": [
         "actual_trend"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -638,7 +638,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     },
@@ -650,7 +650,7 @@
           "height": 298
         },
         "id": "f5PafrpgVvwx",
-        "outputId": "7b4c0e67-67da-4596-aae5-73497e3e7343"
+        "outputId": "2a865b45-75c8-4a31-cb5d-cefee83f066c"
       },
       "source": [
         "pred_test = model.predict(test_features)\r\n",
@@ -661,19 +661,19 @@
         "plt.ylabel('Density')\r\n",
         "plt.legend()"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7fa6ed978e10>"
+              "<matplotlib.legend.Legend at 0x7f2f89624e10>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -697,14 +697,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E3rbJo83WJtO",
-        "outputId": "7a99ad40-533d-47cd-f7a4-fc6292a07ccb"
+        "outputId": "60b4daaa-b242-4a49-c0e0-dcef260f1fd9"
       },
       "source": [
         "differences = (1 - sum(abs(pred_test - actual_test_trend))/len(actual_test_trend)) * 100\r\n",
         "pred_accuracy = differences.item()\r\n",
         "pred_accuracy"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -716,7 +716,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 12
         }
       ]
     },
