--- a/Glass-Compound-Analysis/Random_Forest_sklearn_Erbium_density_prediction.ipynb
+++ b/Glass-Compound-Analysis/Random_Forest_sklearn_Erbium_density_prediction.ipynb
@@ -26,7 +26,7 @@
         "\r\n",
         "from sklearn.ensemble import RandomForestRegressor"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -44,7 +44,7 @@
         "data = pd.read_csv('Molecular-data.csv')\r\n",
         "data"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,7 +405,7 @@
         "train_labels = train_features.pop('Density') # series type\r\n",
         "test_labels = test_features.pop('Density')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +423,7 @@
         "# Train the model\r\n",
         "model.fit(train_features, train_labels)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,7 +467,7 @@
         "  plt.ylabel('Density')\r\n",
         "  plt.legend()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,7 +483,7 @@
         "pred_y = model.predict(train_features)\r\n",
         "pred_y"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +523,7 @@
         "plt.legend()\r\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -560,7 +560,7 @@
         "plt.legend()\r\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -591,7 +591,7 @@
         "pred_accuracy = differences.item()\r\n",
         "pred_accuracy"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,7 +630,7 @@
         "  test_acc.append(est_pred_accuracy)\r\n",
         "  print('Test accuracy for {} estimator is {}'.format(i, est_pred_accuracy))"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +760,7 @@
         "plt.ylabel('Number of estimator')\r\n",
         "plt.show()"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -809,7 +809,7 @@
         "  rand_test_acc.append(rand_pred_accuracy)\r\n",
         "  print('Test accuracy for {} estimator is {}'.format(i, rand_pred_accuracy))"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,7 +859,7 @@
         "plt.ylabel('Test Accuracy')\r\n",
         "plt.show()"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -879,7 +879,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xC_Spz5adtDu"
+        "id": "xC_Spz5adtDu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "31cdafdb-c250-4a90-c3b3-6370dae35acc"
+      },
+      "source": [
+        "final_model = RandomForestRegressor(random_state=7, n_estimators=7)\r\n",
+        "final_model.fit(train_features, train_labels)\r\n",
+        "final_pred_y = final_model.predict(test_features)\r\n",
+        "final_acc = (1 - sum(abs(final_pred_y - actual_test_trend))/len(actual_test_trend)) * 100\r\n",
+        "final_pred_accuracy = final_acc.item()\r\n",
+        "\r\n",
+        "print('Test accuracy :',final_pred_accuracy)"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test accuracy : 90.17714285714284\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G81Dl7qpjmG_"
       },
       "source": [
         ""
