--- a/Glass-Compound-Analysis/DNN_tf2_Erbium_concentration_prediction_train_1000.ipynb
+++ b/Glass-Compound-Analysis/DNN_tf2_Erbium_concentration_prediction_train_1000.ipynb
@@ -15,6 +15,17 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7fDTuJyX8-my"
+      },
+      "source": [
+        "**Attention**\r\n",
+        "\r\n",
+        "This notebook is for experiment purpose. Since the actual output of the erbium concentration is descrete value, range from 0.01 to 0.05, and the variation between them is very small causing difficulty in accurate prediction. Therefore, this notebook is to shows the problem on the prediction and we will work on another notebook to treat it as classification task."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "zWVs3LCQRO_W"
