upload old files

--- a/Decision_Tree_Random_Forest/Sklearn_Decision_Tree_Classifier_Titanic_Survival.ipynb
+++ b/Decision_Tree_Random_Forest/Sklearn_Decision_Tree_Classifier_Titanic_Survival.ipynb
@@ -27,7 +27,7 @@
         "from sklearn import preprocessing\r\n",
         "from sklearn import tree"
       ],
-      "execution_count": 62,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -38,7 +38,7 @@
           "height": 419
         },
         "id": "lbQ0AEuWwQhB",
-        "outputId": "b026102b-2742-4057-d32a-d4cced157d54"
+        "outputId": "0d8ffab4-642d-4432-a9bf-834f38cfdb5f"
       },
       "source": [
         "dataset = sns.load_dataset('titanic')\r\n",
@@ -321,7 +321,7 @@
           "height": 419
         },
         "id": "RHhX1XZyyEuT",
-        "outputId": "7037f869-16d1-4320-f3d8-6679d68c8824"
+        "outputId": "0923c7bd-c830-48c7-f8dd-83de0ee76da0"
       },
       "source": [
         "# Note that the survived column and alive column is consider as closely related variable\r\n",
@@ -332,7 +332,7 @@
         "data = dataset.drop(columns=['alive','who','adult_male'])\r\n",
         "data"
       ],
-      "execution_count": 46,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -561,7 +561,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 7
         }
       ]
     },
@@ -572,12 +572,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1mNOdoHdRCmP",
-        "outputId": "95c600d7-68c6-457a-84fb-b253751617f7"
+        "outputId": "4403afee-6d4d-4b06-a344-9ffe325ac629"
       },
       "source": [
         "data['embarked'].unique()"
       ],
-      "execution_count": 47,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -589,7 +589,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 6
         }
       ]
     },
@@ -600,12 +600,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dfpYM6tUSA4o",
-        "outputId": "f2dcdde6-928b-4de3-8439-54b2eaf61077"
+        "outputId": "8965681a-38c6-453c-ddc7-eec6e932d9b5"
       },
       "source": [
         "data['embark_town'].unique()"
       ],
-      "execution_count": 48,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -617,7 +617,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 5
         }
       ]
     },
@@ -628,12 +628,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O4RqDN2jSEMN",
-        "outputId": "3e62cb39-9d94-4183-8d02-7ba38ad59fe3"
+        "outputId": "df742f18-9aec-4712-c801-351db4fd3e7f"
       },
       "source": [
         "data['deck'].unique()"
       ],
-      "execution_count": 49,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +646,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 8
         }
       ]
     },
@@ -658,14 +658,14 @@
           "height": 419
         },
         "id": "hUQqaWBOSLkC",
-        "outputId": "5d971ecd-5f15-4602-b9c5-bfb91a766fb3"
+        "outputId": "68b03b1f-2230-496f-c7a6-f8c5ad981329"
       },
       "source": [
         "categorical_col = ['sex','embarked','class','alone','embark_town','deck']\r\n",
         "data[categorical_col] = data[categorical_col].astype(str)\r\n",
         "data"
       ],
-      "execution_count": 50,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -894,7 +894,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 9
         }
       ]
     },
@@ -906,7 +906,7 @@
           "height": 419
         },
         "id": "FPSDqiZNlRGU",
-        "outputId": "15774cd7-6c38-4478-d749-06047f3490db"
+        "outputId": "c9ae27e5-9ce2-4a51-f376-4783d55440a7"
       },
       "source": [
         "le = preprocessing.LabelEncoder()\r\n",
@@ -915,7 +915,7 @@
         "\r\n",
         "data"
       ],
-      "execution_count": 51,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1144,7 +1144,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 10
         }
       ]
     },
@@ -1155,13 +1155,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uundzQ_bhP-t",
-        "outputId": "2e451cf1-40a8-48c5-c8cb-9b43137688a1"
+        "outputId": "924a51df-993e-482f-b6c2-8e3b698a6a29"
       },
       "source": [
         "# check if any NaN\r\n",
         "data.isna().sum()"
       ],
-      "execution_count": 53,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1185,7 +1185,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 12
         }
       ]
     },
@@ -1196,14 +1196,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sIfEXUBpiFT7",
-        "outputId": "80f46981-fb12-4411-a6fe-714f6749f907"
+        "outputId": "515ede7f-9f14-4fca-bb91-2c32c95c438f"
       },
       "source": [
         "# Impute the age with mean value\r\n",
         "data['age']=data['age'].replace({np.nan:data['age'].mean()})\r\n",
         "data.isna().sum()"
       ],
-      "execution_count": 56,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1227,7 +1227,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 56
+          "execution_count": 13
         }
       ]
     },
@@ -1238,13 +1238,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WFVgMGvoijSJ",
-        "outputId": "4914712e-ff47-407d-f103-38068d24d828"
+        "outputId": "713f98e0-6375-488f-de12-9b0248b6c06f"
       },
       "source": [
         "# check the data imputation\r\n",
         "data['age']"
       ],
-      "execution_count": 57,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1267,7 +1267,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 57
+          "execution_count": 15
         }
       ]
     },
@@ -1278,7 +1278,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kr2k3SPyxacQ",
-        "outputId": "1eede8b4-be25-4107-9405-4016a10ebffa"
+        "outputId": "8aa71535-c498-4666-d5fd-64c3d459b993"
       },
       "source": [
         "train_data = data.sample(frac=0.8, random_state=0)\r\n",
@@ -1287,7 +1287,7 @@
         "print('Shape of training data :',train_data.shape)\r\n",
         "print('Shape of testing data :',test_data.shape)"
       ],
-      "execution_count": 58,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1307,12 +1307,12 @@
           "height": 419
         },
         "id": "YaXrXYQ7wrzp",
-        "outputId": "e4be9d4b-c129-43cc-9570-7deaf46568ea"
+        "outputId": "8041c198-0714-4213-da4f-aef0181c3ddf"
       },
       "source": [
         "train_data"
       ],
-      "execution_count": 59,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1541,7 +1541,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 59
+          "execution_count": 17
         }
       ]
     },
@@ -1559,7 +1559,7 @@
         "test_x = test_data.drop(columns=['survived'],axis=1)\r\n",
         "test_y = test_data['survived']"
       ],
-      "execution_count": 60,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1570,12 +1570,12 @@
           "height": 419
         },
         "id": "HuYeHd8axwmp",
-        "outputId": "f0a960bf-f472-4d47-a391-28aef21383b0"
+        "outputId": "e5a71054-5e73-4c91-9a9b-e71a7c60a7ad"
       },
       "source": [
         "train_x"
       ],
-      "execution_count": 61,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1792,7 +1792,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 61
+          "execution_count": 19
         }
       ]
     },
@@ -1803,14 +1803,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ac1lO9ZdxxYK",
-        "outputId": "7fb570bb-5a4f-4798-98a2-8db45c7253a1"
+        "outputId": "91c1e6cc-ab76-4c34-ccf8-d93f309f801e"
       },
       "source": [
-        "decision_tree_model = tree.DecisionTreeClassifier(criterion='gini')\r\n",
-        "decision_tree_model.fit(train_x, train_y)\r\n",
-        "decision_tree_model.score(train_x, train_y)"
+        "gini_decision_tree_model = tree.DecisionTreeClassifier(criterion='gini')\r\n",
+        "gini_decision_tree_model.fit(train_x, train_y)\r\n",
+        "gini_decision_tree_model.score(train_x, train_y)"
       ],
-      "execution_count": 63,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1822,7 +1822,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 63
+          "execution_count": 21
         }
       ]
     },
@@ -1833,34 +1833,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0cDkDBDojsyl",
-        "outputId": "8901ace1-a2b2-47e5-dbf2-94b3eb0667e2"
+        "outputId": "f04caab7-a6b1-412f-9391-0264d5532342"
       },
       "source": [
         "# Predict if the passanger is survived\r\n",
-        "prediction = decision_tree_model.predict(test_x)\r\n",
+        "prediction = gini_decision_tree_model.predict(test_x)\r\n",
         "prediction"
       ],
-      "execution_count": 64,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0,\n",
-              "       0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0,\n",
+              "array([1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0,\n",
+              "       0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0,\n",
               "       0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1,\n",
               "       0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0,\n",
-              "       0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0,\n",
+              "       0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0,\n",
               "       1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1,\n",
               "       0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1,\n",
-              "       0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0,\n",
+              "       0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0,\n",
               "       1, 1])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 22
         }
       ]
     },
@@ -1871,19 +1871,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c7shdggijyvv",
-        "outputId": "1c25d088-f20b-4835-a7fa-5e4546110a5e"
+        "outputId": "f9f63c3f-557e-4cce-e805-d58f50f94854"
       },
       "source": [
         "# check accuracy classification score\r\n",
-        "test_accuracy = accuracy_score(test_y,prediction)\r\n",
-        "print('Test accuracy: ', test_accuracy)"
+        "gini_test_accuracy = accuracy_score(test_y,prediction)\r\n",
+        "print('Gini test accuracy: ', gini_test_accuracy)"
       ],
-      "execution_count": 69,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Test accuracy:  0.7640449438202247\n"
+            "Test accuracy:  0.7808988764044944\n"
           ],
           "name": "stdout"
         }
@@ -1892,13 +1892,75 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o8cgybdsnU-d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o8cgybdsnU-d",
+        "outputId": "0ca4861b-3968-45d0-9b14-95fe12ccdf6a"
       },
       "source": [
-        ""
+        "entropy_decision_tree_model = tree.DecisionTreeClassifier(criterion='entropy')\r\n",
+        "entropy_decision_tree_model.fit(train_x, train_y)\r\n",
+        "entropy_decision_tree_model.score(train_x, train_y)\r\n",
+        "entropy_prediction = entropy_decision_tree_model.predict(test_x)\r\n",
+        "entropy_prediction"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0,\n",
+              "       0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0,\n",
+              "       0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1,\n",
+              "       0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0,\n",
+              "       0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0,\n",
+              "       0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1,\n",
+              "       0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1,\n",
+              "       0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0,\n",
+              "       1, 1])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PN5dzi9ipKJi",
+        "outputId": "80be289b-e54e-42ef-cbaa-47f1e4a07069"
+      },
+      "source": [
+        "entropy_test_accuracy = accuracy_score(test_y,entropy_prediction)\r\n",
+        "print('Entropy test accuracy: ', entropy_test_accuracy)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Entropy test accuracy:  0.7752808988764045\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Of3kS83MphlG"
+      },
+      "source": [
+        "The function to measure the quality of a split. Supported criteria are “gini” for the Gini impurity and “entropy” for the information gain. In overall, the criterion that using **Gini is slightly better than entropy based on test accuracy**."
+      ]
     }
   ]
 }
